--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
   provider: ^3.2.0
   contacts_service: ^0.3.10
-
+  permission_handler: '^4.0.0'
+  intl: ^0.16.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
