--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   contacts_service: ^0.3.10
   permission_handler: '^4.0.0'
   intl: ^0.16.0
-  firebase_messaging: ^6.0.9
+  firebase_auth: ^0.15.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
