--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   provider: ^3.2.0
   contacts_service: ^0.3.10
   permission_handler: '^4.0.0'
+  flutter_country_picker: ^0.1.6
   intl: ^0.16.0
   firebase_auth: ^0.15.2
 
