--- a/chat_app/android/app/src/main/AndroidManifest.xml
+++ b/chat_app/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,12 @@
          FlutterApplication and put your custom class here. -->
 	<uses-permission android:name="android.permission.READ_CONTACTS" /> 
 	<uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="chat_app"
