--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
   flutter_country_picker: ^0.1.6
   intl: ^0.16.0
   firebase_auth: ^0.15.2
-
+  sqflite: ^1.2.0
+  path: ^1.6.4
+  path_provider: ^1.5.1
+  shared_preferences: ^0.5.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
