--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path: ^1.6.4
   path_provider: ^1.5.1
   shared_preferences: ^0.5.6
+  firebase_database: ^3.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
