--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -19,20 +19,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^3.2.0
-  contacts_service: ^0.3.10
-  permission_handler: '^4.0.0'
+  provider: ^4.1.3+1
+  contacts_service: ^0.4.6
+  permission_handler: ^5.0.1+1
   flutter_country_picker: ^0.1.6
-  intl: ^0.16.0
-  firebase_auth: ^0.15.2
-  sqflite: ^1.2.0
-  path: ^1.6.4
-  path_provider: ^1.5.1
-  shared_preferences: ^0.5.6
-  firebase_database: ^3.1.1
+  intl: ^0.16.1
+  firebase_auth: ^0.16.1
+  sqflite: ^1.3.1
+  path: ^1.7.0
+  path_provider: ^1.6.11
+  shared_preferences: ^0.5.7+3
+  firebase_database: ^3.1.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
