--- a/chat_app/android/app/src/main/AndroidManifest.xml
+++ b/chat_app/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     
     <uses-permission android:name="android.permission.CAMERA"/>
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:label="ChatApp"
         android:icon="@mipmap/ic_launcher">
         <activity
