--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -14,25 +14,25 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.1.3+1
-  contacts_service: ^0.4.6
-  permission_handler: ^5.0.1+1
-  flutter_country_picker: ^0.1.6
-  intl: ^0.16.1
-  firebase_auth: ^0.16.1
-  sqflite: ^1.3.1
-  path: ^1.6.4
-  path_provider: ^1.6.11
-  shared_preferences: ^0.5.7+3
-  firebase_database: ^3.1.6
+  provider: ^6.0.4
+  contacts_service: ^0.6.3
+  permission_handler: ^10.2.0
+  #flutter_country_picker: ^0.1.6
+  intl: ^0.17.0
+  firebase_auth: ^4.1.1
+  sqflite: ^2.2.0+3
+  path: ^1.8.2
+  path_provider: ^2.0.11
+  shared_preferences: ^2.0.15
+  firebase_database: ^10.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
