--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   provider: ^6.0.4
   contacts_service: ^0.6.3
   permission_handler: ^10.2.0
-  #flutter_country_picker: ^0.1.6
+  country_picker: ^2.0.17
   intl: ^0.17.0
   firebase_auth: ^4.1.1
   sqflite: ^2.2.0+3
